--- a/Advance Web Technology/Session-1/package.json
+++ b/Advance Web Technology/Session-1/package.json
@@ -9,7 +9,10 @@
   "author": "Sarthak",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha1",
     "express": "^4.18.2",
-    "formidable": "^2.1.1"
+    "formidable": "^2.1.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.9.0"
   }
 }
